--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,6 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin/data:/var/lib/pgadmin
       - ./pgadmin/servers.json:/pgadmin4/servers.json
 
-volumes: 
-  pgadmin_data:
