--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,20 +27,20 @@ services:
       db:
         condition: service_healthy
 
-  pgadmin:
-    image: dpage/pgadmin4:9.9
-    container_name: evezor_pgadmin
-    restart: unless-stopped
-    env_file: .env
-    environment:
-      PGADMIN_DEFAULT_EMAIL:    ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    ports:
-      - "5050:80"
-    depends_on:
-      db:
-        condition: service_healthy
-    volumes:
-      - ./pgadmin/data:/var/lib/pgadmin
-      - ./pgadmin/servers.json:/pgadmin4/servers.json
+  # pgadmin:
+  #   image: dpage/pgadmin4:9.9
+  #   container_name: evezor_pgadmin
+  #   restart: unless-stopped
+  #   env_file: .env
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL:    ${PGADMIN_DEFAULT_EMAIL}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+  #   ports:
+  #     - "5050:80"
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   volumes:
+  #     - ./pgadmin/data:/var/lib/pgadmin
+  #     - ./pgadmin/servers.json:/pgadmin4/servers.json
 
